cluster/services/monitoring/loki/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: monitoring
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`loki.${DOMAIN_INTERNAL}`)
      services:
        - kind: Service
          name: loki
          namespace: monitoring
          port: 3100
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
        - name: optimizations
          namespace: traefik
  tls:
    secretName: loki.${DOMAIN_INTERNAL}
